--- a/index.html
+++ b/index.html
@@ -3,151 +3,165 @@ layout: default
 title:
 public: false
 ---
+<link rel="stylesheet" href="{{ " /css/about.css " | prepend: site.baseurl }}">
 
-<link rel="stylesheet" href="{{ "/css/about.css" | prepend: site.baseurl }}">
-
-<a
- href= "/resources/atefhares_cv.pdf" class="btn btn-cta-primary pull-right" target="_blank">download CV <i class="fa fa-download"> </i>
+    <a href="/resources/atefhares_cv.pdf" class="btn btn-cta-primary pull-right" target="_blank">download CV <i class="fa fa-download"> </i>
 </a>
 
-<div class="main-wrapper">
-   <section class="section summary-section">
-      <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
-      <div class="summary">
-         <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
-      </div>
-      <!--//summary--> 
-   </section>
-   <!--//section--> 
-   <section class="section experiences-section">
-      <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
-      <div class="item">
-         <div class="meta">
-            <div class="upper-row">
-               <h3 class="job-title">Lead Developer</h3>
-               <div class="time">2015 - Present</div>
-            </div>
-            <!--//upper-row--> 
-            <div class="company">Startup Hubs, San Francisco</div>
-         </div>
-         <!--//meta--> 
-         <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-         </div>
-         <!--//details--> 
-      </div>
-      <!--//item--> 
-      <div class="item">
-         <div class="meta">
-            <div class="upper-row">
-               <h3 class="job-title">Senior Software Engineer</h3>
-               <div class="time">2014 - 2015</div>
-            </div>
-            <!--//upper-row--> 
-            <div class="company">Google, London</div>
-         </div>
-         <!--//meta--> 
-         <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-         </div>
-         <!--//details--> 
-      </div>
-      <!--//item--> 
-      <div class="item">
-         <div class="meta">
-            <div class="upper-row">
-               <h3 class="job-title">UI Developer</h3>
-               <div class="time">2012 - 2014</div>
-            </div>
-            <!--//upper-row--> 
-            <div class="company">Amazon, London</div>
-         </div>
-         <!--//meta--> 
-         <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-         </div>
-         <!--//details--> 
-      </div>
-      <!--//item--> 
-   </section>
-   <!--//section--> 
-   <section class="section projects-section">
-      <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
-      <div class="intro">
-         <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
-      </div>
-      <!--//intro--> 
-      <div class="item"> <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span> </div>
-      <!--//item--> 
-      <div class="item"> <span class="project-title"><a href="#" target="_blank">DevStudio</a></span> - <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span> </div>
-      <!--//item--> 
-      <div class="item"> <span class="project-title"><a href="#" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span> </div>
-      <!--//item--> 
-      <div class="item"> <span class="project-title"><a href="#" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span> </div>
-      <!--//item--> 
-      <div class="item"> <span class="project-title"><a href="#" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span> </div>
-      <!--//item--> 
-   </section>
-   <!--//section--> 
-   <section class="skills-section section">
-      <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
-      <div class="skillset">
-         <div class="item">
-            <h3 class="level-title">Python &amp; Django</h3>
-            <div class="level-bar">
-               <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
-            </div>
-            <!--//level-bar--> 
-         </div>
-         <!--//item--> 
-         <div class="item">
-            <h3 class="level-title">Javascript &amp; jQuery</h3>
-            <div class="level-bar">
-               <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
-            </div>
-            <!--//level-bar--> 
-         </div>
-         <!--//item--> 
-         <div class="item">
-            <h3 class="level-title">Angular</h3>
-            <div class="level-bar">
-               <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
-            </div>
-            <!--//level-bar--> 
-         </div>
-         <!--//item--> 
-         <div class="item">
-            <h3 class="level-title">HTML5 &amp; CSS</h3>
-            <div class="level-bar">
-               <div class="level-bar-inner" data-level="95%" style="width: 95%;"> </div>
-            </div>
-            <!--//level-bar--> 
-         </div>
-         <!--//item--> 
-         <div class="item">
-            <h3 class="level-title">Ruby on Rails</h3>
-            <div class="level-bar">
-               <div class="level-bar-inner" data-level="85%" style="width: 85%;"> </div>
-            </div>
-            <!--//level-bar--> 
-         </div>
-         <!--//item--> 
-         <div class="item">
-            <h3 class="level-title">Sketch &amp; Photoshop</h3>
-            <div class="level-bar">
-               <div class="level-bar-inner" data-level="60%" style="width: 60%;"> </div>
-            </div>
-            <!--//level-bar--> 
-         </div>
-         <!--//item--> 
-      </div>
-   </section>
-   <!--//skills-section--> 
-
-
-<div align="right" >
-	  <small class="copyright">Some of this page is initially designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a></small> 
+<div class="home">
+    <h1 class="page-heading">About</h1>
 </div>
- 
+
+<div class="main-wrapper">
+    <section class="section summary-section">
+        <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
+        <div class="summary">
+            <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="#" target="_blank">download this free resume/CV template here</a>.
+                Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+        </div>
+        <!--//summary-->
+    </section>
+    <!--//section-->
+    <section class="section experiences-section">
+        <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
+        <div class="item">
+            <div class="meta">
+                <div class="upper-row">
+                    <h3 class="job-title">Lead Developer</h3>
+                    <div class="time">2015 - Present</div>
+                </div>
+                <!--//upper-row-->
+                <div class="company">Startup Hubs, San Francisco</div>
+            </div>
+            <!--//meta-->
+            <div class="details">
+                <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                    dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
+                    enim. Donec pede justo.</p>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+                    aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                    </p>
+            </div>
+            <!--//details-->
+        </div>
+        <!--//item-->
+        <div class="item">
+            <div class="meta">
+                <div class="upper-row">
+                    <h3 class="job-title">Senior Software Engineer</h3>
+                    <div class="time">2014 - 2015</div>
+                </div>
+                <!--//upper-row-->
+                <div class="company">Google, London</div>
+            </div>
+            <!--//meta-->
+            <div class="details">
+                <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                    dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            </div>
+            <!--//details-->
+        </div>
+        <!--//item-->
+        <div class="item">
+            <div class="meta">
+                <div class="upper-row">
+                    <h3 class="job-title">UI Developer</h3>
+                    <div class="time">2012 - 2014</div>
+                </div>
+                <!--//upper-row-->
+                <div class="company">Amazon, London</div>
+            </div>
+            <!--//meta-->
+            <div class="details">
+                <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                    dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            </div>
+            <!--//details-->
+        </div>
+        <!--//item-->
+    </section>
+    <!--//section-->
+    <section class="section projects-section">
+        <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
+        <div class="intro">
+            <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+        </div>
+        <!--//intro-->
+        <div class="item"> <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>            </div>
+        <!--//item-->
+        <div class="item"> <span class="project-title"><a href="#" target="_blank">DevStudio</a></span> - <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>            </div>
+        <!--//item-->
+        <div class="item"> <span class="project-title"><a href="#" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>            </div>
+        <!--//item-->
+        <div class="item"> <span class="project-title"><a href="#" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>            </div>
+        <!--//item-->
+        <div class="item"> <span class="project-title"><a href="#" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>            </div>
+        <!--//item-->
+    </section>
+    <!--//section-->
+    <section class="skills-section section">
+        <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
+        <div class="skillset">
+            <div class="item">
+                <h3 class="level-title">Python &amp; Django</h3>
+                <div class="level-bar">
+                    <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
+                </div>
+                <!--//level-bar-->
+            </div>
+            <!--//item-->
+            <div class="item">
+                <h3 class="level-title">Javascript &amp; jQuery</h3>
+                <div class="level-bar">
+                    <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
+                </div>
+                <!--//level-bar-->
+            </div>
+            <!--//item-->
+            <div class="item">
+                <h3 class="level-title">Angular</h3>
+                <div class="level-bar">
+                    <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
+                </div>
+                <!--//level-bar-->
+            </div>
+            <!--//item-->
+            <div class="item">
+                <h3 class="level-title">HTML5 &amp; CSS</h3>
+                <div class="level-bar">
+                    <div class="level-bar-inner" data-level="95%" style="width: 95%;"> </div>
+                </div>
+                <!--//level-bar-->
+            </div>
+            <!--//item-->
+            <div class="item">
+                <h3 class="level-title">Ruby on Rails</h3>
+                <div class="level-bar">
+                    <div class="level-bar-inner" data-level="85%" style="width: 85%;"> </div>
+                </div>
+                <!--//level-bar-->
+            </div>
+            <!--//item-->
+            <div class="item">
+                <h3 class="level-title">Sketch &amp; Photoshop</h3>
+                <div class="level-bar">
+                    <div class="level-bar-inner" data-level="60%" style="width: 60%;"> </div>
+                </div>
+                <!--//level-bar-->
+            </div>
+            <!--//item-->
+        </div>
+    </section>
+    <!--//skills-section-->
+
+
+    <div align="right">
+        <small class="copyright">Some of this page is initially designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a></small>
+    </div>
+
 </div>
