editing About page -part 1

--- a/index.html
+++ b/index.html
@@ -5,163 +5,208 @@ public: false
 ---
 <link rel="stylesheet" href="{{ " /css/about.css " | prepend: site.baseurl }}">
 
-    <a href="/resources/atefhares_cv.pdf" class="btn btn-cta-primary pull-right" target="_blank">download CV <i class="fa fa-download"> </i>
+<a href="/resources/atefhares_cv.pdf" class="btn btn-cta-primary pull-right" target="_blank">download CV <i class="fa fa-download"> </i>
 </a>
 
 <div class="home">
-    <h1 class="page-heading">About</h1>
+  <h1 class="page-heading">About</h1>
 </div>
 
 <div class="main-wrapper">
-    <section class="section summary-section">
-        <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
-        <div class="summary">
-            <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="#" target="_blank">download this free resume/CV template here</a>.
-                Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
-                nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
-        </div>
-        <!--//summary-->
-    </section>
-    <!--//section-->
-    <section class="section experiences-section">
-        <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
-        <div class="item">
-            <div class="meta">
-                <div class="upper-row">
-                    <h3 class="job-title">Lead Developer</h3>
-                    <div class="time">2015 - Present</div>
-                </div>
-                <!--//upper-row-->
-                <div class="company">Startup Hubs, San Francisco</div>
-            </div>
-            <!--//meta-->
-            <div class="details">
-                <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                    dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-                    enim. Donec pede justo.</p>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-                    aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                    </p>
-            </div>
-            <!--//details-->
-        </div>
-        <!--//item-->
-        <div class="item">
-            <div class="meta">
-                <div class="upper-row">
-                    <h3 class="job-title">Senior Software Engineer</h3>
-                    <div class="time">2014 - 2015</div>
-                </div>
-                <!--//upper-row-->
-                <div class="company">Google, London</div>
-            </div>
-            <!--//meta-->
-            <div class="details">
-                <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                    dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-            </div>
-            <!--//details-->
-        </div>
-        <!--//item-->
-        <div class="item">
-            <div class="meta">
-                <div class="upper-row">
-                    <h3 class="job-title">UI Developer</h3>
-                    <div class="time">2012 - 2014</div>
-                </div>
-                <!--//upper-row-->
-                <div class="company">Amazon, London</div>
-            </div>
-            <!--//meta-->
-            <div class="details">
-                <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                    dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-            </div>
-            <!--//details-->
-        </div>
-        <!--//item-->
-    </section>
-    <!--//section-->
-    <section class="section projects-section">
-        <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
-        <div class="intro">
-            <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
-        </div>
-        <!--//intro-->
-        <div class="item"> <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>            </div>
-        <!--//item-->
-        <div class="item"> <span class="project-title"><a href="#" target="_blank">DevStudio</a></span> - <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>            </div>
-        <!--//item-->
-        <div class="item"> <span class="project-title"><a href="#" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>            </div>
-        <!--//item-->
-        <div class="item"> <span class="project-title"><a href="#" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>            </div>
-        <!--//item-->
-        <div class="item"> <span class="project-title"><a href="#" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>            </div>
-        <!--//item-->
-    </section>
-    <!--//section-->
-    <section class="skills-section section">
-        <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
-        <div class="skillset">
-            <div class="item">
-                <h3 class="level-title">Python &amp; Django</h3>
-                <div class="level-bar">
-                    <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
-                </div>
-                <!--//level-bar-->
-            </div>
-            <!--//item-->
-            <div class="item">
-                <h3 class="level-title">Javascript &amp; jQuery</h3>
-                <div class="level-bar">
-                    <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
-                </div>
-                <!--//level-bar-->
-            </div>
-            <!--//item-->
-            <div class="item">
-                <h3 class="level-title">Angular</h3>
-                <div class="level-bar">
-                    <div class="level-bar-inner" data-level="98%" style="width: 98%;"> </div>
-                </div>
-                <!--//level-bar-->
-            </div>
-            <!--//item-->
-            <div class="item">
-                <h3 class="level-title">HTML5 &amp; CSS</h3>
-                <div class="level-bar">
-                    <div class="level-bar-inner" data-level="95%" style="width: 95%;"> </div>
-                </div>
-                <!--//level-bar-->
-            </div>
-            <!--//item-->
-            <div class="item">
-                <h3 class="level-title">Ruby on Rails</h3>
-                <div class="level-bar">
-                    <div class="level-bar-inner" data-level="85%" style="width: 85%;"> </div>
-                </div>
-                <!--//level-bar-->
-            </div>
-            <!--//item-->
-            <div class="item">
-                <h3 class="level-title">Sketch &amp; Photoshop</h3>
-                <div class="level-bar">
-                    <div class="level-bar-inner" data-level="60%" style="width: 60%;"> </div>
-                </div>
-                <!--//level-bar-->
-            </div>
-            <!--//item-->
-        </div>
-    </section>
-    <!--//skills-section-->
+  <section class="section summary-section">
+    <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
+    <div class="summary">
+      <p>Hi, your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus
+        et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+    </div>
+    <!--//summary-->
+  </section>
+  <!--//section-->
 
+  <section class="section experiences-section">
+    <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
 
-    <div align="right">
-        <small class="copyright">Some of this page is initially designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a></small>
+    <!--item-->
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Android Developer</h3>
+          <div class="time">Jul 2016 - Mar 2017</div>
+        </div>
+        <!--//upper-row-->
+        <div class="company">
+          <a href="https://www.raye7.com/" target="_blank">Raye7</a> | Cairo, Egypt
+        </div>
+      </div>
+      <!--//meta-->
+      <div class="details">
+        <p>I was responsible for the Android development, including -but not limit to-:</p>
+        <ul style="list-style-type:square">
+          <li>Developing/Enhancing the existing "Raye7" Android App.</li>
+          <li>Improving App performance.</li>
+          <li>Enhancing Front-End designs by following the material design guidelines.</li>
+          <li>Performing maintenance & bugs fixes.</li>
+          <li>Integrating Restful-APIs, Databases and SDKs.</li>
+          <li>Communicating/working with back-end team to release a new version of back-end REST APIs.</li>
+          <li>Integrating that new version of back-end APIs with the App.</li>
+          <li>Developing a new version of "Raye7" Android App, contains enhanced UI/UX and working with better performance, beside having a clean code base.</li>
+          <li>Performing security fixes with the help of a security specialist team member.</li>
+        </ul>
+      </div>
+      <!--//details-->
     </div>
 
+    <!--item-->
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Android development Self-Learner</h3>
+          <div class="time">Nov 2015 – Feb 2016</div>
+        </div>
+        <!--//upper-row-->
+        <div class="company">
+          <a href="https://www.mobileapplaunchpad.com.eg" target="_blank">
+                    Mobile Application Launchpad Program
+          </a> | Egypt
+        </div>
+      </div>
+      <!--//meta-->
+      <div class="details">
+        <p>
+          This program is designed to target candidates with strong background in programming (at least 2 years)
+          and Java in particular then enroll them in an Intermediate Android Apps Developing course delivered
+          by <b>Google</b> on <b>Udacity</b> and supported by a well-known partners like:
+          <a href="http://www.tiec.gov.eg/" target="_blank">TIEC</a>
+          ,
+          <a href="http://www.iti.gov.eg/" target="_blank">ITI</a>
+          ,
+          <a href="http://www.mitefarab.org/" target="_blank">MIT Enterprise Forum Arab</a>
+          ,
+          <a href="http://www.mcit.gov.eg" target="_blank">MCIT</a>
+          ,
+          <a href="http://wuzzuf.net/" target="_blank">Wuzzuf</a>
+          and some others.
+
+          <br/>
+          <br/> During the program every trainee studied the course and worked on the in-course project and then to graduate every trainee made a graduation project which reviewed by Udacity Coaches.
+        </p>
+      </div>
+      <!--//details-->
+    </div>
+  </section>
+  <!--//section-->
+
+  <!-- <section class="section projects-section">
+    <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
+    <div class="intro">
+      <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+    </div> -->
+    <!--//intro-->
+    <!-- <div class="item"> <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span> </div> -->
+    <!--//item-->
+    <!-- <div class="item"> <span class="project-title"><a href="#" target="_blank">DevStudio</a></span> - <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span> </div> -->
+    <!--//item-->
+    <!-- <div class="item"> <span class="project-title"><a href="#" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span> </div> -->
+    <!--//item-->
+    <!-- <div class="item"> <span class="project-title"><a href="#" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span> </div> -->
+    <!--//item-->
+    <!-- <div class="item"> <span class="project-title"><a href="#" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span> </div> -->
+    <!--//item-->
+  <!-- </section> -->
+  <!--//section-->
+
+
+  <section class="skills-section section">
+    <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
+    <div class="skillset">
+
+      <div class="item">
+        <h3 class="level-title">Android development</h3>
+        <div class="progress">
+          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 25%;
+           title=""  data-toggle="popover" data-original-title="Basics level includes:" data-content="Intro to Android, Android SDK, Android Studio, XML, Layouts and multiple screens apps, basic networking and background tasks" ">
+            <span class="sr-only">25% Complete</span>
+            <b>Basics</b> <i class="fa fa-check"> </i>
+          </div>
+          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 35%;
+          title=""  data-toggle="popover" data-original-title="Intermediate level includes:" data-content="Data storage, Content providers, SQlite databases, Material design, 3rd party SDKs and libraries, RESTFull APIs, JSON, Android Design/Support Libs, supporting old Android versions, Google Maps/Location services/places/directions APIs, Firebase and push notifications and a bit more" ">
+
+            <span class="sr-only">35% Complete</span>
+            <b>Intermediate</b> <i class="fa fa-check"> </i>
+          </div>
+          <div class="progress-bar progress-bar-striped progress-bar-danger active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
+            <span class="sr-only">25% Complete</span>
+            <b>Pro</b> <i class="fa fa-clock-o"> </i>
+          </div>
+        </div>
+        <!--//level-bar-->
+      </div>
+      <!--//item-->
+
+      <div class="item">
+        <h3 class="level-title">Java &amp; Object-oriented programming (OOP)</h3>
+        <div class="progress progress-striped active">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+            <b>Above Intermidate</b>
+          </div>
+        </div>
+        <!--//level-bar-->
+      </div>
+      <!--//item-->
+
+      <div class="item">
+        <h3 class="level-title">Algorithms &amp; Data Structures</h3>
+        <div class="progress progress-striped active">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+            <span class="sr-only">85% Complete</span>
+            <b>Intermidate</b>
+          </div>
+        </div>
+        <!--//level-bar-->
+      </div>
+      <!--//item-->
+
+      <div class="item">
+        <h3 class="level-title">C/C++</h3>
+        <div class="progress progress-striped active">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+            <span class="sr-only">70% Complete</span>
+            <b>Above basics</b>
+          </div>
+        </div>
+        <!--//level-bar-->
+      </div>
+      <!--//item-->
+
+      <div class="item">
+        <h3 class="level-title">HTML, CSS, Javascript &amp; JQuery</h3>
+        <div class="progress progress-striped active">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+            <span class="sr-only">50% Complete</span>
+            <b>basics</b>
+          </div>
+        </div>
+        <!--//level-bar-->
+      </div>
+      <!--//item-->
+
+    </div>
+  </section>
+  <!--//skills-section-->
+
+  <div class="pull-right" >
+    <a class="more-link pull-right" href="https://eg.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"><i class="fa fa-external-link"></i> More about me on LinkedIn</a>
+  </div>
+
 </div>
+
+<div align="left" class="copyright">
+  <small >Some of this page is initially designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a></small>
+</div>
+
+<script>
+$('[data-toggle="popover"]').popover({
+    placement : 'top',
+    trigger : 'hover'
+});
+</script>
