editing About page -part 2

--- a/index.html
+++ b/index.html
@@ -16,8 +16,24 @@ public: false
   <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
     <div class="summary">
-      <p>Hi, your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus
-        et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+      <p>Hi, I am Atef, a self-learner and technology-passionate person.</p>
+      <p>
+        I have studied Pure Mathematics and Computer Science at Faculty of Science, AinShams university - Cairo, Egypt
+        as well as having studies in some other fields.
+      </p>
+      <p>
+        Self-Study is the tool I use to improve and increase my knowledge to Build
+        my professional career.
+      </p>
+      <p>
+        I am currently interested in Android mobile Apps development,
+        I have almost <b>2 years</b> of experience in Android Apps development including <b>8 months</b> of
+        being a professional Android developer in an Startup.
+      </p>
+      <br />
+      <p>
+        The following are my latest experiences, skills and projects.
+      </p>
     </div>
     <!--//summary-->
   </section>
@@ -201,7 +217,7 @@ public: false
 </div>
 
 <div align="left" class="copyright">
-  <small >Some of this page is initially designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a></small>
+  <small >Some of this page is initially designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a> and modified by me.</small>
 </div>
 
 <script>
