--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@ public: false
 
   <section class="skills-section section">
     <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
+    <b>
+      <p>
+      <small>Please note: the progress bars describes my proficiency in a skill among all of my other skills</small>
+      </p>
+    </b>
+     <br />
     <div class="skillset">
 
       <div class="item">
@@ -150,8 +156,8 @@ public: false
             <span class="sr-only">35% Complete</span>
             <b>Intermediate</b> <i class="fa fa-check"> </i>
           </div>
-          <div class="progress-bar progress-bar-striped progress-bar-danger active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
-            <span class="sr-only">25% Complete</span>
+          <div class="progress-bar progress-bar-striped progress-bar-danger active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+            <span class="sr-only">30% Complete</span>
             <b>Pro</b> <i class="fa fa-clock-o"> </i>
           </div>
         </div>
@@ -163,7 +169,7 @@ public: false
         <h3 class="level-title">Java &amp; Object-oriented programming (OOP)</h3>
         <div class="progress progress-striped active">
           <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-            <b>Above Intermidate</b>
+            <b>Semi-Pro</b>
           </div>
         </div>
         <!--//level-bar-->
@@ -175,7 +181,7 @@ public: false
         <div class="progress progress-striped active">
           <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
             <span class="sr-only">85% Complete</span>
-            <b>Intermidate</b>
+            <b>Intermediate</b>
           </div>
         </div>
         <!--//level-bar-->
@@ -187,7 +193,7 @@ public: false
         <div class="progress progress-striped active">
           <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
             <span class="sr-only">70% Complete</span>
-            <b>Above basics</b>
+            <b>Intermediate</b>
           </div>
         </div>
         <!--//level-bar-->
