--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title:
 public: false
 ---
-<link rel="stylesheet" href="{{ " /css/about.css " | prepend: site.baseurl }}">
- 
+<link rel="stylesheet" href="{{ "/resources/css/about.css" | prepend: site.baseurl }}">
+
 <a href="/resources/atefhares_cv.pdf" class="btn btn-cta-primary pull-right" target="_blank">download CV <i class="fa fa-download"> </i>
 </a>
 
