adding projects and new CV and removing posts

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ public: false
         <!--//upper-row-->
         <div class="company">
           <a href="https://www.mobileapplaunchpad.com.eg" target="_blank">
-                    Mobile Application Launchpad Program
+                    Mobile Application Launchpad Program (MAL)
           </a> | Egypt
         </div>
       </div>
@@ -112,23 +112,23 @@ public: false
   </section>
   <!--//section-->
 
-  <!-- <section class="section projects-section">
+  <section class="section projects-section">
     <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
     <div class="intro">
-      <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
-    </div> -->
+      <p>I have been Always trying to practise what i learn! these are my top recent projects that I started or worked on</p>
+    </div> 
     <!--//intro-->
-    <!-- <div class="item"> <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span> </div> -->
+     <div class="item"> <span class="project-title"><a href="#hook">Study-Organizer</a></span> - <span class="project-tagline">A fully designed Android app acts as an organizer for students to organize Classes/Exams times. App Features includes: Dashboard, Weekly Calendar view, Schedule view, Creating Years/Terms and their Classes and Exams,receiving notifications on/before Class/Exam time.</span> </div> 
     <!--//item-->
-    <!-- <div class="item"> <span class="project-title"><a href="#" target="_blank">DevStudio</a></span> - <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span> </div> -->
+     <div class="item"> <span class="project-title"><a href="#hook">Sunshine</a></span> - <span class="project-tagline">MAL in-course project , A fully designed Android app to know Weather state per day and see stats for the next 7 days using a 3rd party API.</span> </div> 
     <!--//item-->
-    <!-- <div class="item"> <span class="project-title"><a href="#" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span> </div> -->
+     <div class="item"> <span class="project-title"><a href="#hook">Popular-Movies</a></span> - <span class="project-tagline">MAL graduation project, A fully designed Android app to show the popular movies released early using a 3rd party API. It can display the full Movie Info (poster, description, generics, rate, etc.), Also you can save favorite movies to easily check them later.</span> </div> 
     <!--//item-->
-    <!-- <div class="item"> <span class="project-title"><a href="#" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span> </div> -->
+     <div class="item"> <span class="project-title"><a href="#hook">Infinity-Calculator</a></span> - <span class="project-tagline">Fully designed windows forms application. Simple/Scientific Calculator, [VB.Net] and it Can used to do advanced calculations.</span> </div> 
     <!--//item-->
-    <!-- <div class="item"> <span class="project-title"><a href="#" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span> </div> -->
+     <div class="item"> <span class="project-title"><a href="#hook">X-O Game pro</a></span> - <span class="project-tagline">It’s a “Tic-Tac-Toe” game, [VB.Net] - windows forms application. You can play with CPU or with another player.</span> </div> 
     <!--//item-->
-  <!-- </section> -->
+   </section> 
   <!--//section-->
 
 
