edit in content

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ public: false
           <li>Improving App performance.</li>
           <li>Enhancing Front-End designs by following the material design guidelines.</li>
           <li>Performing maintenance & bugs fixes.</li>
+          <li>Manging Raye7 apps on Google PlayStore.</li>
           <li>Integrating Restful-APIs, Databases and SDKs.</li>
           <li>Communicating/working with back-end team to release a new version of back-end REST APIs.</li>
           <li>Integrating that new version of back-end APIs with the App.</li>
