new edit in home page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@ public: false
         </ul>
       </div>
       <!--//details-->
+       {% if site.linkedin_username %}
+      <div class="pull-right">
+        <a class="more-link pull-right" href="https://www.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"><i class="fa fa-external-link"></i> Projects I worked on @ Raye7 - LinkedIn</a>
+      </div>
+      {% endif %}
+      <br/>
     </div>
 
     <!--item-->
@@ -118,15 +124,41 @@ public: false
       <p>I have been Always trying to practise what i learn! these are my top recent projects that I started or worked on</p>
     </div> 
     <!--//intro-->
-     <div class="item"> <span class="project-title"><a href="#hook">Study-Organizer</a></span> - <span class="project-tagline">A fully designed Android app acts as an organizer for students to organize Classes/Exams times. App Features includes: Dashboard, Weekly Calendar view, Schedule view, Creating Years/Terms and their Classes and Exams,receiving notifications on/before Class/Exam time.</span> </div> 
+     <div class="item"> <span class="project-title"><a href="#hook">Study-Organizer</a></span>
+     &nbsp;
+     <i class="fa fa-android" aria-hidden="true"  style="color:#77C159 ; font-size: 1.7em"></i>
+     &nbsp;
+     <span class="label label-default"  style="background-color:#E72D2E ; font-size: 0.8em">JAVA</span>
+     <br/>
+     <span class="project-tagline">A fully designed Android app acts as an organizer for students to organize Classes/Exams times. App Features includes: Dashboard, Weekly Calendar view, Schedule view, Creating Years/Terms and their Classes and Exams,receiving notifications on/before Class/Exam time.</span> </div> 
     <!--//item-->
-     <div class="item"> <span class="project-title"><a href="#hook">Sunshine</a></span> - <span class="project-tagline">MAL in-course project , A fully designed Android app to know Weather state per day and see stats for the next 7 days using a 3rd party API.</span> </div> 
+     <div class="item"> <span class="project-title"><a href="#hook">Sunshine</a></span>
+     &nbsp;
+     <i class="fa fa-android" aria-hidden="true"  style="color:#77C159 ; font-size: 1.7em"></i>
+     &nbsp;
+     <span class="label label-default"  style="background-color:#E72D2E ; font-size: 0.8em">JAVA</span>
+     <br/>
+     <span class="project-tagline">MAL in-course project, A fully designed Android app to know Weather state per day and see stats for the next 7 days using a 3rd party API.</span> </div> 
     <!--//item-->
-     <div class="item"> <span class="project-title"><a href="#hook">Popular-Movies</a></span> - <span class="project-tagline">MAL graduation project, A fully designed Android app to show the popular movies released early using a 3rd party API. It can display the full Movie Info (poster, description, generics, rate, etc.), Also you can save favorite movies to easily check them later.</span> </div> 
+     <div class="item"> <span class="project-title"><a href="#hook">Popular-Movies</a></span>
+     &nbsp;
+     <i class="fa fa-android" aria-hidden="true"  style="color:#77C159 ; font-size: 1.7em"></i>
+     &nbsp;
+     <span class="label label-default"  style="background-color:#E72D2E ; font-size: 0.8em">JAVA</span>
+     <br/>
+     <span class="project-tagline">MAL graduation project, A fully designed Android app to show the popular movies released early using a 3rd party API. It can display the full Movie Info (poster, description, generics, rate, etc.), Also you can save favorite movies to easily check them later.</span> </div> 
     <!--//item-->
-     <div class="item"> <span class="project-title"><a href="#hook">Infinity-Calculator</a></span> - <span class="project-tagline">Fully designed windows forms application. Simple/Scientific Calculator, [VB.Net] and it Can used to do advanced calculations.</span> </div> 
+     <div class="item"> <span class="project-title"><a href="#hook">Infinity-Calculator</a></span>
+     &nbsp;
+     <span class="label label-default"  style="background-color:#542597 ; font-size: 0.8em">VB.Net</span>
+     <br/>
+     <span class="project-tagline">Fully designed windows forms application. Simple/Scientific Calculator, it Can used to do advanced calculations.</span> </div> 
     <!--//item-->
-     <div class="item"> <span class="project-title"><a href="#hook">X-O Game pro</a></span> - <span class="project-tagline">It’s a “Tic-Tac-Toe” game, [VB.Net] - windows forms application. You can play with CPU or with another player.</span> </div> 
+     <div class="item"> <span class="project-title"><a href="#hook">X-O Game pro</a></span>
+      &nbsp;
+     <span class="label label-default"  style="background-color:#542597 ; font-size: 0.8em">VB.Net</span>
+     <br/>
+     <span class="project-tagline">It’s a “Tic-Tac-Toe” game - windows forms application. You can play with CPU or with another player.</span> </div> 
     <!--//item-->
    </section> 
   <!--//section-->
@@ -211,6 +243,18 @@ public: false
         <!--//level-bar-->
       </div>
       <!--//item-->
+      
+      <br/>
+      <span class="label label-primary" style="font-size: 0.9em">Linux</span>
+      <span class="label label-primary" style="font-size: 0.9em">JSON</span>
+      <span class="label label-primary" style="font-size: 0.9em">Databases</span>
+      <span class="label label-primary" style="font-size: 0.9em">Git</span>
+      <span class="label label-primary" style="font-size: 0.9em">XML</span>
+      <span class="label label-primary" style="font-size: 0.9em">SQL</span>
+      <span class="label label-primary" style="font-size: 0.9em">MATLAB (for Mathematics)</span>
+      <span class="label label-primary" style="font-size: 0.9em">Mathematics</span>
+      <span class="label label-primary" style="font-size: 0.9em">Statistics</span>
+
 
     </div>
   </section>
