new edit in home page

--- a/index.html
+++ b/index.html
@@ -227,30 +227,36 @@ public: false
         <!--//level-bar-->
       </div>
       <!--//item-->
-
-      <div class="item">
-        <h3 class="level-title">HTML, CSS, Javascript &amp; JQuery</h3>
-        <div class="progress progress-striped active">
-          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-            <span class="sr-only">50% Complete</span>
-            <b>basics</b>
+      
+      <div class="panel panel-transparent">
+        <div id="collapseSkills" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSkills">
+          <div class="panel-body">
+            <span class="label label-primary" style="font-size: 0.9em">Linux</span>
+            <span class="label label-primary" style="font-size: 0.9em">JSON</span>
+            <span class="label label-primary" style="font-size: 0.9em">Databases</span>
+            <span class="label label-primary" style="font-size: 0.9em">Git</span>
+            <span class="label label-primary" style="font-size: 0.9em">XML</span>
+            <span class="label label-primary" style="font-size: 0.9em">SQL</span>
+            <span class="label label-primary" style="font-size: 0.9em">MATLAB (for Mathematics)</span>
+            <span class="label label-primary" style="font-size: 0.9em">SQlite</span>
+            <span class="label label-primary" style="font-size: 0.9em">Android Studio</span>
+            <span class="label label-primary" style="font-size: 0.9em">Intellij idea</span>
+            <span class="label label-primary" style="font-size: 0.9em">VB.Net</span>
+            <span class="label label-primary" style="font-size: 0.9em">Python</span>
+            <span class="label label-primary" style="font-size: 0.9em">HTML & CSS (bsics)</span>
+            <span class="label label-primary" style="font-size: 0.9em">Javascript & JQuery (bsics)</span>
+            <span class="label label-primary" style="font-size: 0.9em">Mathematics</span>
+            <span class="label label-primary" style="font-size: 0.9em">Statistics</span>
           </div>
         </div>
-        <!--//level-bar-->
+        <div class="panel-heading" role="tab" id="headingSkills">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSkills" aria-expanded="true" aria-controls="collapseSkills">
+          See other skills
+        </a>
+          </h4>
+        </div>
       </div>
-      <!--//item-->
-      
-      <br/>
-      <span class="label label-primary" style="font-size: 0.9em">Linux</span>
-      <span class="label label-primary" style="font-size: 0.9em">JSON</span>
-      <span class="label label-primary" style="font-size: 0.9em">Databases</span>
-      <span class="label label-primary" style="font-size: 0.9em">Git</span>
-      <span class="label label-primary" style="font-size: 0.9em">XML</span>
-      <span class="label label-primary" style="font-size: 0.9em">SQL</span>
-      <span class="label label-primary" style="font-size: 0.9em">MATLAB (for Mathematics)</span>
-      <span class="label label-primary" style="font-size: 0.9em">Mathematics</span>
-      <span class="label label-primary" style="font-size: 0.9em">Statistics</span>
-
 
     </div>
   </section>
