new edit in home

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ public: false
     <div class="summary">
       <p>Hi, I am Atef, a self-learner and technology-passionate person.</p>
       <p>
-        I have studied Pure Mathematics and Computer Science at Faculty of Science, AinShams university - Cairo, Egypt
-        as well as having studies in some other fields.
+       I have studied Computer Science at Faculty of Science, AinShams university - Cairo, Egypt
+       as well as having studies in Mathematics and some other fields.
       </p>
       <p>
         Self-Study is the tool I use to improve and increase my knowledge to Build
@@ -24,7 +24,7 @@ public: false
       <p>
         I am currently interested in Android mobile Apps development,
         I have almost <b>2 years</b> of experience in Android Apps development including <b>8 months</b> of
-        being a professional Android developer in an Startup.
+        being a professional Android developer in a Startup.
       </p>
       <br />
       <p>
