fixing spelling in about me

--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ public: false
             <span class="label label-primary" style="font-size: 0.9em">Intellij idea</span>
             <span class="label label-primary" style="font-size: 0.9em">VB.Net</span>
             <span class="label label-primary" style="font-size: 0.9em">Python</span>
-            <span class="label label-primary" style="font-size: 0.9em">HTML & CSS (bsics)</span>
-            <span class="label label-primary" style="font-size: 0.9em">Javascript & JQuery (bsics)</span>
+            <span class="label label-primary" style="font-size: 0.9em">HTML & CSS (basics)</span>
+            <span class="label label-primary" style="font-size: 0.9em">Javascript & JQuery (basics)</span>
             <span class="label label-primary" style="font-size: 0.9em">Mathematics</span>
             <span class="label label-primary" style="font-size: 0.9em">Statistics</span>
           </div>
